--- a/formOne.html
+++ b/formOne.html
@@ -11,14 +11,14 @@
     <form>
 
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name">
+        <input type="text" id="name" name="name" required>
         <br><br>
         <label for="emailID">Email ID:</label>
-        <input type="text" id="emailID" name="name">
+        <input type="text" id="emailID" name="name" required>
         <br>
         <br>
         <label for="telephone">Telephone No:</label>
-        <input type="tel" id="telephone" name="telephone">
+        <input type="tel" id="telephone" name="telephone" required>
 
         <br>
         <br>
